--- a/MovieShop.Web/MovieShop.Web.csproj
+++ b/MovieShop.Web/MovieShop.Web.csproj
@@ -16,4 +16,8 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Shared\Components\Genres\Default.cshtml" />
+    </ItemGroup>
+
 </Project>
